--- a/WindowsApp9/dialogboxandoopsexamples.vbproj
+++ b/WindowsApp9/dialogboxandoopsexamples.vbproj
@@ -93,6 +93,12 @@
     <Compile Include="constructor.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="constructorandinheritance.Designer.vb">
+      <DependentUpon>constructorandinheritance.vb</DependentUpon>
+    </Compile>
+    <Compile Include="constructorandinheritance.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="overloading.Designer.vb">
       <DependentUpon>overloading.vb</DependentUpon>
     </Compile>
@@ -135,6 +141,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="constructorandinheritance.resx">
+      <DependentUpon>constructorandinheritance.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="dialogcontrol.resx">
       <DependentUpon>dialogcontrol.vb</DependentUpon>
     </EmbeddedResource>
